salatokapp (0.8) distribution; urgency=medium

  * initialisation version

 -- adenlall <lalladen@naver.com>  Mon, 11 Jul 2023 15:00:00 +0000
