@@ -371,6 +371,14 @@
               <child>
                 <object class="GtkBox" id="salatbox">
                   <property name="halign">center</property>
+                  <child>
+                      <object class="GtkLabel">
+                        <property name="label">Soon ...</property>
+                        <style>
+                          <class name="title-2"/>
+                        </style>
+                      </object>
+                  </child>
                 </object>
             </child>
             
