@@ -1,2 +1,2 @@
-salatokapp_0.8_i386.buildinfo utils optional
-salatokapp_0.8_i386.deb utils optional
+salatokapp_0.9_all.deb utils optional
+salatokapp_0.9_i386.buildinfo utils optional
