@@ -1,9 +1,9 @@
 be966cdc7895cab3b963f835451089d4  usr/bin/app.salatok.gtk
-60e09ef41a147faf0df4f39e458ef4b6  usr/share/app.salatok.gtk/app.salatok.gtk.data.gresource
-7d6c32b97a58ea2e68c2c0ec120cdad4  usr/share/app.salatok.gtk/app.salatok.gtk.src.gresource
+e3dbcabc6ca8de8117a8981a4a926f1f  usr/share/app.salatok.gtk/app.salatok.gtk.data.gresource
+27c071407085285eec7c3128b8c8660e  usr/share/app.salatok.gtk/app.salatok.gtk.src.gresource
 02295a0271a2f3de86c48441ac8369be  usr/share/applications/app.salatok.gtk.desktop
 986dadaf9997b2221fa2df25a4a4d240  usr/share/dbus-1/services/app.salatok.gtk.service
-b92cdad37e9a885ec56d3d21c0948367  usr/share/doc/salatokapp/changelog.gz
+4aa0172487348ceb87a21ec70a03d967  usr/share/doc/salatokapp/changelog.gz
 9571905f738b0b9db8ac19d7451cf0b7  usr/share/glib-2.0/schemas/app.salatok.gtk.gschema.xml
 06c13173bd2b035e590399b40f98f274  usr/share/icons/hicolor/scalable/apps/app.salatok.gtk.svg
 06c13173bd2b035e590399b40f98f274  usr/share/icons/hicolor/symbolic/apps/app.salatok.gtk.symbolic.svg
